--- a/Task.ipynb
+++ b/Task.ipynb
@@ -973,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ideal epoch has been found to be 5 after several hit and trial attempts. This is evident from the graph below. The train and the test loss are almost equal at epoch 5. The model is not overfitting or underfitting."
+    "##### <b> The ideal epoch has been found to be 5 after several hit and trial attempts. This is evident from the graph below. The train and the test loss are almost equal at epoch 5. The model is not overfitting or underfitting. </b>"
    ]
   },
   {
@@ -1053,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
